--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel-project-template",
   "version": "2.0.0",
-  "description": "",
+  "description": "desc",
   "homepage": "https://vasylkivt.github.io/goit-js-hw-08",
   "scripts": {
     "start": "parcel src/*.html",
